vuelta al principio

--- a/contacto.html
+++ b/contacto.html
@@ -13,14 +13,12 @@
 
 <body class="contenedorgridcont">
 
-	<nav  id="nav"> 
+	<nav id="nav"> 
 		<div>
 			<ul>
-				<li>
 				<a href="index.html">
 					<img  src="img/nnnn.png" alt= "logo de marilyn manson"> 
 				</a>
-				</li>
 				<li>
 					<a href="index.html">HOME</a>	
 				</li>
@@ -44,14 +42,13 @@
 			</div>
 		</nav>
 		<header  id="header" class="imgnuev"> 
-			<img  src=" img/marilyn-manson.gif">
-
+			<img class="log" src=" img/banner.jpg">	
 		</header>
 		<!-- FIN DEL HEADER (UNA IMAGEN)---->
 		<main id="main" class=" semigrande flex2">
 			<section> 
 				<form  action="envio.php">
-					<h1  class="text-center contsug ">CONTACTOS Y SUGERENCIAS: 
+					<h1  class="text-center contsug">CONTACTOS Y SUGERENCIAS: 
 					</h1>
 					<label for="">Nombre:</label>
 					<input type="text"  id="Nombre" placeholder="Ingrese su nombre"required>
@@ -85,8 +82,8 @@
 						<!-FIN DE LA SECTION CONTACTO------>
 						</main>
 						<footer id="footer" class="contfo" >
-							<h5 class="text-center  grande animacion">SITIOS OFICIALES</h5>
-							<article >
+							<h5 class="text-center  grande">SITIOS OFICIALES</h5>
+							<article>
 								<a href="https://www.facebook.com/MarilynManson" target="_blank">
 									<img src="img/f.png">
 								</a>
@@ -96,7 +93,7 @@
 									<img src="img/in.png">
 								</a>
 							</article>
-							<article >
+							<article>
 								<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
 									<img src="img/yu.png">
 								</a>
