--- a/toour.html
+++ b/toour.html
@@ -3,53 +3,48 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
 	<link rel="shortcut  icon" href="img/nnn.ico">
 	<title>
-		Marilyn Manson FanPage
+		Marilyn Manson FanPage Tour
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body class="contenedorgrid">
-	<nav id="nav" > 
+<body>
+<nav  id="nav"> 
 		<div>
-			<ul>	
+			<ul>
 				<li>
-					<a href="index.html">
-						<img  src="img/nnnn.png" alt= "logo de marilyn manson"> 	</a>
-					</li>
-					<li>
-						<a href="">HOME</a>	
-					</li>
+				<a href="index.html">
+					<img  src="img/nnnn.png" alt= "logo de marilyn manson"> 
+				</a>
+				</li>
+				<li>
+					<a href="index.html">HOME</a>	
+				</li>
 
-					<li>
-						<a href="discografia.html">DISCOGRAFIA</a>	
-					</li>
+				<li>
+					<a href="discografia.html">DISCOGRAFIA</a>	
+				</li>
 
-					<li>
-						<a href="galeria.html">GALERIA</a>	
-					</li>
+				<li>
+					<a href="galeria.html">GALERIA</a>	
+				</li>
 
-					<li>
-						<a href="tour.html">TOUR</a>	
-					</li>
+				<li>
+					<a href="toour.html">TOUR</a>	
+					</ li>
 
 					<li>
 						<a href="contacto.html">CONTACTOS</a>	
 					</li>
-					
 				</ul>
 			</div>
 		</nav>
-		<header id="header"> 
-			<img  src=" img/oo.jpg">	
-		</header>
-		<main id="main" class="fondogri fm bg">   
-			<h1 class="text-center supergrande">MARILYN MANSON</h1>
-			
-		</main>
-		<footer id="footer" class="contfo" >
-			<h5 class="text-center  grande">SITIOS OFICIALES</h5>
+
+
+
+<footer id="footer" class="contfo" >
+			<h5 class="text-center  grande animacion">SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
 					<img src="img/f.png">
@@ -72,6 +67,5 @@
 			</article>
 			
 		</footer>
-	</div>
 </body>
 </html>
