--- a/contacto.html
+++ b/contacto.html
@@ -82,7 +82,7 @@
 						<!-FIN DE LA SECTION CONTACTO------>
 						</main>
 						<footer id="footer" class="contfo" >
-							<h5 class="text-center  grande">SITIOS OFICIALES</h5>
+							<h5 class="text-center  grande animacion">SITIOS OFICIALES</h5>
 							<article>
 								<a href="https://www.facebook.com/MarilynManson" target="_blank">
 									<img src="img/f.png">
