subida ultrasubida animacion

--- a/discografia.html
+++ b/discografia.html
@@ -148,7 +148,7 @@
 			</div>
 		</main> 
 		<footer id="footer" class="contfo" >
-			<h5 class="text-center  grande animacion">SITIOS OFICIALES</h5>
+			<h5 class="text-center chico animacion">SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
 					<img src="img/f.png">
