--- a/contacto.html
+++ b/contacto.html
@@ -81,8 +81,8 @@
 						</div>
 						<!-FIN DE LA SECTION CONTACTO------>
 						</main>
-						<footer id="footer" class="contfo" >
-							<h5 class="text-center  grande animacion">SITIOS OFICIALES</h5>
+						<footer id="footer" class="contfo chico" >
+							<h5 class="text-center animacion">SITIOS OFICIALES</h5>
 							<article>
 								<a href="https://www.facebook.com/MarilynManson" target="_blank">
 									<img src="img/f.png">
