--- a/tour.html
+++ b/tour.html
@@ -52,10 +52,10 @@
 			
 			<article id="c" ><img src="img/log1.gif"></article>
 
-			<h4 class="grande text-center" id="d">***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
+			<h4 class=" text-center" id="d">***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
 		</main>
 		<footer id="footer" class="contfo" >
-			<h5 class="text-center  grande animacion">SITIOS OFICIALES</h5>
+			<h5 class="text-center chico  animacion">SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
 					<img src="img/f.png">
