--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			
 		</main>
 		<footer id="footer" class="contfo" >
-			<h5 class="text-center chico animacion">SITIOS OFICIALES</h5>
+			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
 					<img src="img/f.png">
