--- a/contacto.html
+++ b/contacto.html
@@ -64,8 +64,6 @@
 							<option value="CABA"> Ciudad de Buenos Aires</option>
 							<option value="Buenos Aires">Buenos Aires</option>
 							<option value="Interior Argentina">Interior de la Argentina</option>
-							<option value= " Paraguay">Paraguay </option>
-							<option value="Exterior Argentina">Exterior de la Argentina</option>
 						</select></label>
 
 						<label for="mensaje">Sugerencias y Opiniones:</label>
@@ -82,7 +80,7 @@
 						<!-FIN DE LA SECTION CONTACTO------>
 						</main>
 						<footer id="footer" class="contfo chico" >
-							<h5 class="text-center animacion">SITIOS OFICIALES</h5>
+							<h5 class="text-center text-colorwhite animacion">SITIOS OFICIALES</h5>
 							<article>
 								<a href="https://www.facebook.com/MarilynManson" target="_blank">
 									<img src="img/f.png">
