--- a/tour.html
+++ b/tour.html
@@ -55,7 +55,7 @@
 			<h4 class=" text-center" id="d">***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
 		</main>
 		<footer id="footer" class="contfo" >
-			<h5 class="text-center chico  animacion">SITIOS OFICIALES</h5>
+			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
 					<img src="img/f.png">
