--- a/tour.html
+++ b/tour.html
@@ -7,46 +7,47 @@
 	<title>
 		Tour Marilyn Manson
 	</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body class="contenedorgridtour">
-	<nav id="nav" > 
-		<div>
-			<ul>	
-				<li>
-					<a href="index.html">
-						<img  src="img/nnnn.png" alt= "logo de marilyn manson"> 	</a>
-					</li>
-					<li>
-						<a href="index.html">HOME</a>	
-					</li>
+	<nav id="nav" class="navbar navbar-expand-md j">
+  <div class="container-fluid">
+     <!-- este es el boton mcdonald -->
+    <a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse j" id="navbarNav">
+      <ul >
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="index.html">HOME</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" href="discografia.html">DISCOGRAFIA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="galeria.html">GALERIA</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="tour.html">TOUR</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contacto.html">CONTACTO</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-					<li>
-						<a href="discografia.html">DISCOGRAFIA</a>	
-					</li>
 
-					<li>
-						<a href="galeria.html">GALERIA</a>	
-					</li>
-
-					<li>
-						<a href="tour.html">TOUR</a>	
-					</li>
-
-					<li>
-						<a href="contacto.html">CONTACTOS</a>	
-					</li>
-					
-				</ul>
-			</div>
-		</nav>
 		<!---FIN DEL NAVE--->
-		<header >
+		<header id="header" >
 			<img src=" img/black.jpg" alt="marilyn manson foto"> 
 		</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-		<main class="flex fnd" >
-			<h1 class="margin2" id="a">TOUR / ULTIMAS FECHAS</h1> 
+		<main class="flex fnd" id="main">
+			<h1 class="margin2 " id="a">TOUR / ULTIMAS FECHAS</h1> 
 
 			<article id="b"><img src="img/log.gif"></article>
 			
@@ -62,7 +63,7 @@
 				</a>
 			</article>
 			<article>
-				<a href="https://www.in.com/marilynmanson/?hl=es" target="_blank">
+				<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
 					<img src="img/in.png">
 				</a>
 			</article>
@@ -78,5 +79,7 @@
 			</article>
 			
 		</footer>
+		<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 	</body>
 	</html>
