--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut  icon" href="img/nnn.ico">
 	<title>
-		Contacto
+		Contacto 
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -49,23 +49,24 @@
 		</header>
 	<main class="text-colorwhite semigrande"><!-- FIN DEL HEADER (UNA IMAGEN)---->
 <section class="j">
-  <label for="exampleFormControlInput1" class="form-label">Nombre y Apellido</label>
-  <input type="email" class="form-control borra" id="exampleFormControlInput1" placeholder="ingrese su nombre y apellido">
-  <label for="exampleFormControlInput1" class="form-label">Email</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-  <label>Localidad:
+  <label for="exampleFormControlInput1" class="form-label p-2">Nombre y Apellido</label>
+  <input type="email" class="form-control borra brd" id="exampleFormControlInput1" placeholder="ingrese su nombre y apellido">
+  <label for="exampleFormControlInput1" class="form-label p-2">Email</label>
+  <input type="email" class="form-control brd" id="exampleFormControlInput1" placeholder="name@example.com">
+  <label class="p-4 brd">Localidad:
 						<select name="" id="Localidad">
 							<option value="CABA"> Ciudad de Buenos Aires</option>
 							<option value="Buenos Aires">Buenos Aires</option>
 							<option value="Interior Argentina">Interior de la Argentina</option>
 						</select></label>
-  <label for="exampleFormControlTextarea1" class="form-label">Opiniones Y Sugerencias:</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" ></textarea>
+  <label for="exampleFormControlTextarea1" class="form-label p-2">Opiniones Y Sugerencias:</label>
+  <textarea class="form-control brd" id="exampleFormControlTextarea1" rows="3" ></textarea>
   <div>
-  Deseo recibir las ultimas noticias de la pagina:
-  <input class="form-check-input mt-0" type="radio" value="" aria-label="Radio button for following text input">
+  <h3 class="p-2">Deseo recibir las ultimas noticias de la pagina:
+  <input class="form-check-input mt-0 " type="radio" value="" aria-label="Radio button for following text input">
+  </h3>
  
-	<div class="text-center">
+	<div class="text-center p-3">
 	<input  type="reset"  class="Boton" value="Cancelar"><input  type="submit" class="Boton" name="Enviar">
   </div>
    </section>
@@ -107,30 +108,31 @@
 						</div></main>
 						<!-FIN DE LA SECTION CONTACTO------>
 						
-						<footer id="footer" class="contfo chico" >
-							<h5 class="text-center text-colorwhite animacion">SITIOS OFICIALES</h5>
-							<article>
-								<a href="https://www.facebook.com/MarilynManson" target="_blank">
-									<img src="img/f.png">
-								</a>
-							</article>
-							<article>
-								<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-									<img src="img/in.png">
-								</a>
-							</article>
-							<article>
-								<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-									<img src="img/yu.png">
-								</a>
-							</article>
-							<article>
-								<a href="https://www.marilynmanson.com/" target="_blank">
-									<img src="img/logo1.png">
-								</a>
-							</article>
-						</footer>
-					</div>
+						<footer id="footer" class="contfo" >
+			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
+			<article>
+				<a href="https://www.facebook.com/MarilynManson" target="_blank">
+					<img class="animacion__footer" src="img/f.png">
+				</a>
+			</article>
+			<article>
+				<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
+					<img class="animacion__footer" src="img/in.png">
+				</a>
+			</article>
+			<article>
+				<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
+					<img class="animacion__footer" src="img/yu.png">
+				</a>
+			</article>
+			<article>
+				<a href="https://www.marilynmanson.com/" target="_blank">
+					<img class="animacion__footer"  src="img/logo1.png">
+				</a>
+			</article>
+			
+		</footer>
+	
 					<!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 				</body>
