--- a/index.html
+++ b/index.html
@@ -46,29 +46,41 @@
 		</header>
 		<main id="main" class="fondogri">   
 
-			<h1 class="text-center ">MARILYN MANSON</h1>
-			
-		</main>
+			<h1 class="text-center">MARILYN MANSON</h1>
+			<div class="flex1 text-center text-colorwhite medio">
+			<p>La banda nace en 1989, cuando Marilyn Manson conoce a Scott Putesky. Ambos se pusieron de acuerdo en los ideales del grupo, asustar y criticar a la sociedad americana resaltando todos los tabúes. En el dúo Manson componía y cantaba y Daisy se ocupaba de los ritmos y efectos con un teclado Yamaha RX8, y las guitarras. Meat Beat Cleaver Beat, una especie de maqueta de coleccionistas y que también está en algunos CD's piratas recoge esos primeros pasos del grupo.</p>
+
+<p>El grupo va adquiriendo popularidad con las dotes de Manson para el espectáculo, creaba carteles publicitarios, e impresionaba en sus shows con grandes dosis de sexo, chicas crucificadas, fuego, animales vivos...
+
+En 1994 el grupo logra grabar, no sin dificultades su primer disco Portrait of an American Family. Entra en escena el nuevo batería, Kenny Wilson, bautizado con el nombre de Ginger Fish, para sustituir a Sarah Lee Lucas que no encajaba en la banda.
+
+Smells Like Children, sale en 1995, se trata de un EP que contenía una versión del Smells Like Teen Spirit, y el Sweet Dreams, el nombre de Marilyn Manson comenzaba a sonar con fuerza.
+
+1996 ve el lanzamiento de Antichrist Superstar, un disco complicado por el momento del grupo por la adicción a las drogas y los vaivenes de la banda; de todas formas el disco tiene una repercusión fuera de toda discusión, se venden más de 13 millones de discos.</p>
+	<p>Curiosidades:
+Según la tradición y los ideales del grupo, cada integrante debe llevar un pseudónimo encabezado por el nombre de una mujer Famosa y el apellido de un asesino o criminal conocido. </p>
+</div>
+			</main>
 		<footer id="footer" class="contfo" >
 			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
-					<img src="img/f.png">
+					<img class="animacion__footer" src="img/f.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-					<img src="img/in.png">
+					<img class="animacion__footer" src="img/in.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-					<img src="img/yu.png">
+					<img class="animacion__footer" src="img/yu.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.marilynmanson.com/" target="_blank">
-					<img src="img/logo1.png">
+					<img class="animacion__footer"  src="img/logo1.png">
 				</a>
 			</article>
 			
