--- a/galeria.html
+++ b/galeria.html
@@ -81,28 +81,28 @@
 			</div>
 		</main>
 		<footer id="footer" class="contfo" >
-			<h5 class="text-center text-colorwhite chico animacion">SITIOS OFICIALES</h5>
+			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
-					<img src="img/f.png">
+					<img class="animacion__footer" src="img/f.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-					<img src="img/in.png">
+					<img class="animacion__footer" src="img/in.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-					<img src="img/yu.png">
+					<img class="animacion__footer" src="img/yu.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.marilynmanson.com/" target="_blank">
-					<img src="img/logo1.png">
+					<img class="animacion__footer"  src="img/logo1.png">
 				</a>
 			</article>
-
+			
 		</footer>
 	</div>
 	<!-- JavaScript Bundle with Popper -->
