--- a/tour.html
+++ b/tour.html
@@ -46,35 +46,31 @@
 		<header id="header" >
 			<img src=" img/black.jpg" alt="marilyn manson foto"> 
 		</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-		<main class="flex fnd" id="main">
-			<h1 class="margin2 " id="a">TOUR / ULTIMAS FECHAS</h1> 
+		<main  class="flex2 fondotour" id="main">
+			<h1 class="margin2 " >TOUR / ULTIMAS FECHAS</h1> 
 
-			<article id="b"><img src="img/log.gif"></article>
-			
-			<article id="c" ><img src="img/log1.gif"></article>
-
-			<h4 class=" text-center" id="d">***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
+			<h4 class=" text-center" >***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
 		</main>
 		<footer id="footer" class="contfo" >
 			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
 			<article>
 				<a href="https://www.facebook.com/MarilynManson" target="_blank">
-					<img src="img/f.png">
+					<img class="animacion__footer" src="img/f.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-					<img src="img/in.png">
+					<img class="animacion__footer" src="img/in.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-					<img src="img/yu.png">
+					<img class="animacion__footer" src="img/yu.png">
 				</a>
 			</article>
 			<article>
 				<a href="https://www.marilynmanson.com/" target="_blank">
-					<img src="img/logo1.png">
+					<img class="animacion__footer"  src="img/logo1.png">
 				</a>
 			</article>
 			
