--- a/contacto.html
+++ b/contacto.html
@@ -47,8 +47,7 @@
 		<header  id="header" > 
 			<img  src="img/marilyn-manson.gif">	
 		</header>
-	<main class="text-colorwhite semigrande"><!-- FIN DEL HEADER (UNA IMAGEN)---->
-<section class="j">
+	<main class="text-colorwhite semigrande j">
   <label for="exampleFormControlInput1" class="form-label p-2">Nombre y Apellido</label>
   <input type="email" class="form-control borra brd" id="exampleFormControlInput1" placeholder="ingrese su nombre y apellido">
   <label for="exampleFormControlInput1" class="form-label p-2">Email</label>
@@ -58,10 +57,12 @@
 							<option value="CABA"> Ciudad de Buenos Aires</option>
 							<option value="Buenos Aires">Buenos Aires</option>
 							<option value="Interior Argentina">Interior de la Argentina</option>
-						</select></label>
+	
+				</select></label>
+  <div>		
   <label for="exampleFormControlTextarea1" class="form-label p-2">Opiniones Y Sugerencias:</label>
   <textarea class="form-control brd" id="exampleFormControlTextarea1" rows="3" ></textarea>
-  <div>
+  </div>
   <h3 class="p-2">Deseo recibir las ultimas noticias de la pagina:
   <input class="form-check-input mt-0 " type="radio" value="" aria-label="Radio button for following text input">
   </h3>
@@ -69,7 +70,6 @@
 	<div class="text-center p-3">
 	<input  type="reset"  class="Boton" value="Cancelar"><input  type="submit" class="Boton" name="Enviar">
   </div>
-   </section>
 </main>	
 
 
