--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body class="contenedorgrid">
-<nav id="nav" class="navbar navbar-expand-md j">
+<body class="contenedorgrid ">
+<nav id="nav" class="navbar navbar-expand-md j ">
   <div class="container-fluid">
      <!-- este es el boton mcdonald -->
     <a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse j" id="navbarNav">
       <ul >
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="index.html">HOME</a>
+          <a class="nav-link ul" aria-current="page" href="index.html">HOME</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link" href="discografia.html">DISCOGRAFIA</a>
@@ -44,21 +44,12 @@
 		<header id="header"> 
 			<img  src=" img/oo.jpg">	
 		</header>
-		<main id="main" class="fondogri">   
+		<main id="main" class="fondomain">   
 
 			<h1 class="text-center">MARILYN MANSON</h1>
 			<div class="flex1 text-center text-colorwhite medio">
-			<p>La banda nace en 1989, cuando Marilyn Manson conoce a Scott Putesky. Ambos se pusieron de acuerdo en los ideales del grupo, asustar y criticar a la sociedad americana resaltando todos los tabúes. En el dúo Manson componía y cantaba y Daisy se ocupaba de los ritmos y efectos con un teclado Yamaha RX8, y las guitarras. Meat Beat Cleaver Beat, una especie de maqueta de coleccionistas y que también está en algunos CD's piratas recoge esos primeros pasos del grupo.</p>
-
-<p>El grupo va adquiriendo popularidad con las dotes de Manson para el espectáculo, creaba carteles publicitarios, e impresionaba en sus shows con grandes dosis de sexo, chicas crucificadas, fuego, animales vivos...
-
-En 1994 el grupo logra grabar, no sin dificultades su primer disco Portrait of an American Family. Entra en escena el nuevo batería, Kenny Wilson, bautizado con el nombre de Ginger Fish, para sustituir a Sarah Lee Lucas que no encajaba en la banda.
-
-Smells Like Children, sale en 1995, se trata de un EP que contenía una versión del Smells Like Teen Spirit, y el Sweet Dreams, el nombre de Marilyn Manson comenzaba a sonar con fuerza.
-
-1996 ve el lanzamiento de Antichrist Superstar, un disco complicado por el momento del grupo por la adicción a las drogas y los vaivenes de la banda; de todas formas el disco tiene una repercusión fuera de toda discusión, se venden más de 13 millones de discos.</p>
-	<p>Curiosidades:
-Según la tradición y los ideales del grupo, cada integrante debe llevar un pseudónimo encabezado por el nombre de una mujer Famosa y el apellido de un asesino o criminal conocido. </p>
+			<p>Marilyn Manson (nacido Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, conocido por su personalidad e imagen controvertidas como vocalista ylíder de la banda de metal industrial Marilyn Manson. Su nombre artístico se formó a partir de los nombres de la actriz Marilyn Monroe y del convicto Charles Manson.
+			Apareció en algunas películas como Jawbreaker, Lost Highway de David Lynch y Party Monster. No sólo se dedica a la música, sino también a la pintura. Figura en el lugar número 44 en la lista de los 100 mejores vocalistas de metal de todos los tiempos, según Hit Parader. Manson además ha sido certificado por el IFPI como uno de los 100 artistas más exitosos de todos los tiempos y ostenta un puesto entre los 5 artistas del Industrial Metal más exitosos, certificando 50 millones de discos vendidos. Manson tiene su alter ego andrógino llamado "Omega" que apareció en su álbum de estudio "Mechanical Animals" </p>
 </div>
 			</main>
 		<footer id="footer" class="contfo" >
