--- a/discografia.html
+++ b/discografia.html
@@ -51,100 +51,113 @@
 		<main id="main" class="fondogaledis">
 
 				<h1 class="text-center supergrande">DISCOGRAFIA DE MARILYN MANSON</h1>
-				<h2 class="text-center blanc paddingb" >HAZ CLICK EN LA IMAGEN DEL ALBUM PARA ESCUCHARLO COMPLETO EN YOUTUBE</h2>
 				<div  class="flexdisco borderdis">   
+				<div class="text-center">
 				<article class="ft " >
 					<h4> A Potrait American Family - 1994 </h4>
-					<a href="https://www.youtube.com/watch?v=4jYpcJBouVE" target="_blank">
 						<img src="img/discos/portrait.jpg" alt="imagen del album portrait american family">
-					</a>
 				</article>
+				<a class="btn btn-secondary" href="https://www.youtube.com/watch?v=4jYpcJBouVE" role="button" target="_blank">Escuchar en youtube</a>
+				</div>
+				<div class="text-center">
 				<article class="ft">
 					<h4>Antichrist Superstar - 1996</h4>
-					<a href="https://www.youtube.com/watch?v=uW94OQzDAMg" target="_blank">
 						<img src="img/discos/super.jpg" alt="imagen del album 	antichrist superstar">
-					</a>	
 				</article>
+				<a class="btn btn-secondary" href="https://www.youtube.com/watch?v=uW94OQzDAMg" role="button " target="_blank">Escuchar en youtube</a>
+			</div >
+			<div class="text-center">
 				<article class="ft">
 					<h4 >Mechanical Animals - 1998</h4>
-					<a href="https://www.youtube.com/watch?v=6Fn7gd08hAE&list=PLBzBwYhHpqLL9QFeI2Q7FT7dQoTsI2hcl" target="_blank">
 						<img src="img/discos/mechanical.jpg" alt="imagen del album 	mechanical animals">
-					</a>	
 				</article>
-
+				<a class="btn btn-secondary" href="https://www.youtube.com/watch?v=6Fn7gd08hAE&list=PLBzBwYhHpqLL9QFeI2Q7FT7dQoTsI2hcl" target="_blank" role="button">Escuchar en youtube</a>
+			</div>
+			<div class="text-center">
 				<article class="ft">
 					<h4 >The Last Tour On Earth - 1999</h4>
 
-					<a href="https://www.youtube.com/watch?v=YERLixP10Ho&list=PLuIgBDZwi9eXHCbN4hf2zAq_Np_cO-1Kl" target="_blank">
 						<img src="img/discos/thelast.jpg" alt="imagen del album 	the last tour on earth">
-					</a>	
 				</article>
-
+				<a class="btn btn-secondary" href="https://www.youtube.com/watch?v=YERLixP10Ho&list=PLuIgBDZwi9eXHCbN4hf2zAq_Np_cO-1Kl" target="_blank" role="button">Escuchar en youtube</a>
+			</div>
+			<div class="text-center">
 				<article class="ft">
 					<h4 >Holy Wood (In The Shadow Of The Valley Of Death) - 2000</h4>
 
-					<a href="https://www.youtube.com/watch?v=oM81q5WlDlc&list=PL6ogdCG3tAWgFvMVkAhZISG5g0vn-8lfr" target="_blank">
+					<a  target="_blank">
 						<img src="img/discos/holly.jpg" alt="imagen del album 	Holy Wood (In The Shadow Of The Valley Of Death)">
 					</a>	
 				</article>
-
+				<a class="btn btn-secondary" href="https://www.youtube.com/watch?v=oM81q5WlDlc&list=PL6ogdCG3tAWgFvMVkAhZISG5g0vn-8lfr" target="_blank" role="button">Escuchar en youtube</a>
+			</div>
+			<div class="text-center">
 				<article class="ft">
 					<h4>The Golden Age Of Grotesque- 2003</h4>	
 
-					<a href="https://www.youtube.com/watch?v=WGUzKMxb3NU" target="_blank">
+					<a  target="_blank">
 						<img src="img/discos/thegolden.jpg" alt="imagen del album 	The Golden Age Of Grotesque 2003">
 					</a>	
 				</article>
-
+				<a class="btn btn-secondary" href="https://www.youtube.com/watch?v=WGUzKMxb3NU" target="_blank" role="button">Escuchar en youtube</a>
+			</div>
+			<div class="text-center">
 				<article class="ft">
 					<h4 >Lest We Forget The Best Of MM- 2004</h4>	
 
-					<a href="https://www.youtube.com/watch?v=v6UkQqrkfuU&list=PLPhQKb2xhZJ_WXp_uf_VgpXz5hiIyIUvr" target="_blank">
 						<img src="img/discos/thebest.jpg" alt="imagen del album 	The Golden Age Of Grotesque 2003">
-					</a>	
+					
 				</article>
+				<a class="btn btn-secondary" href="https://www.youtube.com/watch?v=v6UkQqrkfuU&list=PLPhQKb2xhZJ_WXp_uf_VgpXz5hiIyIUvr" target="_blank"  role="button">Escuchar en youtube</a>
+			</div>
+
+			<div class="text-center">
 				<article class="ft">
 					<h4 >Eat Me, Drink Me - 2007</h4>
-
-					<a href="https://www.youtube.com/watch?v=q6BKiIcUq_s&list=PL5OU5WvFqBTiB3oUb-RxASnQ0G34aC7sF" target="_blank">
 						<img src="img/discos/eatmedrinkme.jpg" alt="imagen del album 	Eat Me, Drink Me 2007">
-					</a>	
 				</article>
+				<a class="btn btn-secondary"  href="https://www.youtube.com/watch?v=q6BKiIcUq_s&list=PL5OU5WvFqBTiB3oUb-RxASnQ0G34aC7sF" target="_blank"  role="button">Escuchar en youtube</a>
+			</div>
+			<div class="text-center">
 				<article class="ft">
 					<h4>The High End Of Low - 2009</h4>	
-
-					<a href="https://www.youtube.com/watch?v=LaEekA7WPLU&list=PLxzSZG7g8c8yvuP6uxXoFv-_tNsXjLspQ" target="_blank">
 						<img src="img/discos/high.jpg" alt="imagen del album 	The High End Of Low 2009">
-					</a>	
+			
 				</article>
+				<a class="btn btn-secondary"  href="https://www.youtube.com/watch?v=LaEekA7WPLU&list=PLxzSZG7g8c8yvuP6uxXoFv-_tNsXjLspQ" target="_blank"  role="button">Escuchar en youtube</a>
+			</div>
+			<div class="text-center"> 
+				
+			
 				<article class="ft">
-					<h4 >Born Villain -     2012</h4>
-
-					<a href="https://www.youtube.com/watch?v=0iXJzrFDAVM&list=PL3EsyX1NZFvXHlMTneiiJ8Yju5r9awLLl " target="_blank">
+					<h4 >Born Villain - 2012</h4>
 						<img src="img/discos/born.jpg" alt="imagen del album Born Villain">
-					</a>	
 				</article>
+				<a class="btn btn-secondary"  href="https://www.youtube.com/watch?v=0iXJzrFDAVM&list=PL3EsyX1NZFvXHlMTneiiJ8Yju5r9awLLl " target="_blank" role="button">Escuchar en youtube</a>
+			</div>
+			<div class="text-center">
 
 				<article class="ft">
 					<h4 >The Pale Emperor - 2014</h4>	
-
-					<a href="https://www.youtube.com/watch?v=sezJKs8xmOU" target="_blank">
 						<img src="img/discos/pale.jpg" alt="imagen del album The Pale Emperor ">
-					</a>
+		
 				</article>
+				<a class="btn btn-secondary"  href="https://www.youtube.com/watch?v=sezJKs8xmOU" target="_blank" role="button">Escuchar en youtube</a>
+			</div>
+			<div class="text-center">
 				<article class="ft">
 					<h4>Heaven Upside Down - 2017</h4>	
-
-					<a href="https://www.youtube.com/watch?v=LKbECUrFM8I&list=PL6ogdCG3tAWg2XpnMOh5mKO5hcSNZIKD6" target="_blank">
 						<img src="img/discos/heaven.jpg" alt="imagen del album Heaven Upside Down">
-					</a>	
 				</article>
+				<a class="btn btn-secondary"  href="https://www.youtube.com/watch?v=LKbECUrFM8I&list=PL6ogdCG3tAWg2XpnMOh5mKO5hcSNZIKD6" target="_blank" target="_blank" role="button">Escuchar en youtube</a>
+			</div>
+			<div class="text-center p-3"> 
 				<article class="ft">
 					<h4 >We Are Chaos - 2020</h4>
-					<a href="https://www.youtube.com/watch?v=KDpuz6q4FBg&list=PLxA687tYuMWgeaiSNrfp070AxxZVhBaOV" target="_blank">
 						<img  src="img/discos/chaos.jpg" alt="imagen del album We Are Chaos 2020">
-					</a>
 				</article>
+				<a class="btn btn-secondary"  href="https://www.youtube.com/watch?v=KDpuz6q4FBg&list=PLxA687tYuMWgeaiSNrfp070AxxZVhBaOV" target="_blank" target="_blank" target="_blank" role="button">Escuchar en youtube</a>
+			</div>
 			</div>
 		</main> 
 	<footer id="footer" class="contfo" >
