--- a/galeria.html
+++ b/galeria.html
@@ -45,40 +45,53 @@
 		<header id="header" class="text-center"> 
 			<img  src=" img/gale.jpg">	
 		</header>
-		<main id="main" class=" fondogaledis">
-			<h1 class="text-center supergrande paddingfo">GALERIA DE IMAGENES</h1>
-			<div class="flexdisco bordercolo">
-			<img src="img/galmm/1.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/3.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/4.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/5.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/6.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/7.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/8.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/9.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/10.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/11.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/12.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/13.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/14.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/15.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/16.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/17.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/18.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/19.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/20.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/21.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/22.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/23.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/24.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/25.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/26.png" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/27.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<img src="img/galmm/28.jpg" alt="imagen de Marilyn Manson"class="ft">
-			<!-- <img src="img/galmm/29.jpg" alt="imagen de Marilyn Manson" > -->
-			<img src="img/galmm/30.jpg" alt="imagen de Marilyn Manson" class="ft">
-			<!-- <img src="img/galmm/31.jpg" alt="imagen de Marilyn Manson" > -->	
-			</div>
+		<main  class="fondogaledis" id="main">
+<h1 class="text-center supergrande text-colorwhite">Galeria De Imagenes De Marilyn Manson</h1>
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/galmm/z.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/galmm/b.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/galmm/c.jpg" class="d-block w-100" alt="...">
+    </div>
+     <div class="carousel-item">
+      <img src="img/galmm/d.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/galmm/e.jpg" class="d-block w-100" alt="...">
+    </div>
+    
+     <div class="carousel-item">
+      <img src="img/galmm/h.png" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/galmm/i.jpg" class="d-block w-100" alt="...">
+    </div>
+     <div class="carousel-item">
+      <img src="img/galmm/j.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/galmm/k.jpg" class="d-block w-100" alt="...">
+    </div>
+     <div class="carousel-item">
+      <img src="img/galmm/l.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/galmm/m.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 		</main>
 		<footer id="footer" class="contfo" >
 			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
