--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="shortcut  icon" href="img/nnn.ico">
 	<title>
-		Marilyn Manson FanPage
+		Marilyn Manson FansPage
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
