arreglada de tour y galeria largo

--- a/galeria.html
+++ b/galeria.html
@@ -92,6 +92,10 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+  <div >
+    
+      <img src="img/giphy.gif" class="d-block w-100">
+    </div>
 		</main>
 		<footer id="footer" class="contfo" >
 			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
