--- a/tour.html
+++ b/tour.html
@@ -50,6 +50,7 @@
 			<h1 class="margin2 " >TOUR / ULTIMAS FECHAS</h1> 
 
 			<h4 class=" text-center" >***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
+			<img class="w-100" src="img/mmtour.jpg">
 		</main>
 		<footer id="footer" class="contfo" >
 			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
