bueno creo que ya me voy a dormir

--- a/tour.html
+++ b/tour.html
@@ -49,8 +49,10 @@
 		<main  class="flex2 fondotour" id="main">
 			<h1 class="margin2 " >TOUR / ULTIMAS FECHAS</h1> 
 
-			<h4 class=" text-center" >***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
+			<h4 class=" text-center negr" >***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
+			<div class="imgtour">
 			<img class="w-100" src="img/mmtour.jpg">
+			</div>
 		</main>
 		<footer id="footer" class="contfo" >
 			<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
