--- a/galeria.html
+++ b/galeria.html
@@ -47,6 +47,7 @@
 		</header>
 		<main  class="fondogaledis" id="main">
 <h1 class="text-center supergrande text-colorwhite">Galeria De Imagenes De Marilyn Manson</h1>
+<div>
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -92,8 +93,9 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
+<h2 class="text-center text-colorwhite medio m-3">Desplaza las imagenes con los controles de los boredes o dezplaza con el dedo</h2>
+</div>
   <div >
-    
       <img src="img/giphy.gif" class="d-block w-100">
     </div>
 		</main>
