actualizacion proyecto final beta1

--- a/discografia.html
+++ b/discografia.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="contenedorgriddisco">	
-	<nav id="nav" class="navbar navbar-expand-md j">
+	<nav id="nav" class="navbar navbar-expand-md j fx">
   <div class="container-fluid">
      <!-- este es el boton mcdonald -->
     <a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
@@ -42,13 +42,13 @@
 </nav>
 
 
-		<header id="header" class="text-center"> 
+		<header id="header" class="text-center "> 
 
-			<img src=" img/disco.jpg" alt="mariylyn manson foto">
+			<img src=" img/disco.jpg" class="paddingto" alt="mariylyn manson foto">
 			
 		</header>
 		<!-- FIN DEL HEADER (UNA IMAGEN)---->
-		<main id="main" class="fondogaledis">
+		<main id="main" class="background-image">
 
 				<h1 class="text-center supergrande">DISCOGRAFIA DE MARILYN MANSON</h1>
 				<div  class="flexdisco borderdis">   
