--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="shortcut  icon" href="img/nnn.ico">
 	<title>
-		Marilyn Manson FansPage
+		Marilyn Manson FanPage
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body class="contenedorgrid ">
-<nav id="nav" class="navbar navbar-expand-md j ">
+<nav id="nav" class="navbar navbar-expand-md j fx">
   <div class="container-fluid">
      <!-- este es el boton mcdonald -->
     <a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
@@ -39,15 +39,12 @@
     </div>
   </div>
 </nav>
-
-
 		<header id="header"> 
-			<img  src=" img/oo.jpg">	
-		</header>
+			<img class="paddingto" src=" img/oo.jpg">	</header>
 		<main id="main" class="fondomain">   
 
-			<h1 class="text-center">MARILYN MANSON</h1>
-			<div class="flex1 text-center text-colorwhite medio">
+			<div class="paddingfo flex1 text-center text-colorwhite medio">
+				<h1 >MARILYN MANSON</h1>
 			<p>Marilyn Manson (nacido Brian Hugh Warner, 5 de enero de 1969, Canton, Ohio, Estados Unidos) es un cantante, compositor,actor, escritor, pintor y director de cine estadounidense, conocido por su personalidad e imagen controvertidas como vocalista ylíder de la banda de metal industrial Marilyn Manson. Su nombre artístico se formó a partir de los nombres de la actriz Marilyn Monroe y del convicto Charles Manson.
 			Apareció en algunas películas como Jawbreaker, Lost Highway de David Lynch y Party Monster. No sólo se dedica a la música, sino también a la pintura. Figura en el lugar número 44 en la lista de los 100 mejores vocalistas de metal de todos los tiempos, según Hit Parader. Manson además ha sido certificado por el IFPI como uno de los 100 artistas más exitosos de todos los tiempos y ostenta un puesto entre los 5 artistas del Industrial Metal más exitosos, certificando 50 millones de discos vendidos. Manson tiene su alter ego andrógino llamado "Omega" que apareció en su álbum de estudio "Mechanical Animals" </p>
 </div>
