--- a/tour.html
+++ b/tour.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="contenedorgridtour">
-	<nav id="nav" class="navbar navbar-expand-md j">
+	<nav id="nav" class="navbar navbar-expand-md j fx">
   <div class="container-fluid">
      <!-- este es el boton mcdonald -->
     <a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
@@ -47,7 +47,7 @@
 			<img src=" img/black.jpg" alt="marilyn manson foto"> 
 		</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 		<main  class="flex2 fondotour" id="main">
-			<h1 class="margin2 " >TOUR / ULTIMAS FECHAS</h1> 
+			<h1 class="margin2 paddingto" >TOUR / ULTIMAS FECHAS</h1> 
 
 			<h4 class=" text-center negr" >***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
 			<div class="imgtour">
