--- a/galeria.html
+++ b/galeria.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body class="contenedorgridgaleria">
-	<nav id="nav" class="navbar navbar-expand-md j">
+	<nav id="nav" class="navbar navbar-expand-md j fx">
   <div class="container-fluid">
      <!-- este es el boton mcdonald -->
     <a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
@@ -38,15 +38,13 @@
       </ul>
     </div>
   </div>
-</nav>
+  </nav>
 
-
-
-		<header id="header" class="text-center"> 
+	<header id="header" class="text-center"> 
 			<img  src=" img/gale.jpg">	
-		</header>
-		<main  class="fondogaledis" id="main">
-<h1 class="text-center supergrande text-colorwhite">Galeria De Imagenes De Marilyn Manson</h1>
+	</header>
+		<main  class="background-image" id="main">
+  <h1 class="text-center supergrande text-colorwhite">Galeria De Imagenes De Marilyn Manson</h1>
 <div>
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
@@ -93,7 +91,7 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-<h2 class="text-center text-colorwhite medio m-3">Desplaza las imagenes con los controles de los boredes o dezplaza con el dedo</h2>
+<h2 class="text-center text-colorwhite medio m-3">Desplaza las imagenes con los controles de los bordes o dezplaza con el dedo</h2>
 </div>
   <div >
       <img src="img/giphy.gif" class="d-block w-100">
