proyecto final segunda entrega

--- a/contacto.html
+++ b/contacto.html
@@ -49,8 +49,8 @@
 		</header>
 
 		<!-- FIN DEL HEADER (UNA IMAGEN)---->
-		<main id="main" class=" semigrande">
-				
+		<main id="main" class=" semigrande back__cont">
+				<div class="for">
 					<form  id="formul" id="form" action="envio.php">
 						<h1  class="text-center paddingto">CONTACTOS Y SUGERENCIAS: 
 					</h1>
@@ -80,7 +80,7 @@
 								<div class="text-center">
 										<input  type="reset"  class="Boton" value="Cancelar"><input  type="submit" class="Boton" name="Enviar">
 							</div>
-						
+						</div>
 							<!-FIN DE LA SECTION CONTACTO------>
 							</main>
 
