--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 </nav>
 		<header id="header"> 
-			<img class="paddingto" src=" img/oo.jpg">	</header>
+			<img class="paddingto" src=" img/home666.jpg">	</header>
 		<main id="main" class="fondomain">   
 
 			<div class="paddingfo flex1 text-center text-colorwhite medio">
