--- a/tour.html
+++ b/tour.html
@@ -49,7 +49,7 @@
 		<main  class="flex2 fondotour" id="main">
 			<h1 class="margin2 paddingto" >TOUR / ULTIMAS FECHAS</h1> 
 
-			<h4 class=" text-center negr" >***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
+			<h4 class=" text-center" >***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
 			<div class="imgtour">
 			<img class="w-100" src="img/mmtour.jpg">
 			</div>
