subida para entrega de sass1

--- a/contacto.html
+++ b/contacto.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="contenedorgridcont">
-	<nav id="nav" class="navbar navbar-expand-md fx ">
+	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid ">
 			<!-- este es el boton mcdonald -->
 			<a  href="index.html"><img  src="img/nnnn.png" alt= "logo de marilyn manson"> </a>
@@ -49,22 +49,22 @@
 	</header>
 
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-	<main id="main" class=" semigrande back__cont">
+	<main id="main" class=" semigrande ">
 		<div class="for">
 			<form  id="form" action="envio.php">
 				<h1  class="text-center paddingto">CONTACTOS Y SUGERENCIAS: 
 				</h1>
 				<label for="">Nombre:</label>
-				<input type="text"  id="Nombre" placeholder="Ingrese su nombre"required>
+				<input type="text"  id="nombre" placeholder="Ingrese su nombre"required>
 
 				<label for="">Apellido:</label>
-				<input type="text" id="Apellido" placeholder="Ingrese su apellido" required>
+				<input type="text" id="apellido" placeholder="Ingrese su apellido" required>
 
 				<label for="">Email:</label>
-				<input type="text" id="Email" placeholder="Ingrese su email" required>
+				<input type="text" id="email" placeholder="Ingrese su email" required>
 
 				<label>Localidad:
-					<select name="" id="Localidad">
+					<select name="" id="localidad">
 						<option value="CABA"> Ciudad de Buenos Aires</option>
 						<option value="Buenos Aires">Buenos Aires</option>
 						<option value="Interior Argentina">Interior de la Argentina</option>
@@ -76,10 +76,10 @@
 					<textarea name="textarea" rows="5" cols="5"></textarea>
 
 					<label for="">Deseo recibir las ultimas noticias de la pagina:
-						<input type="checkbox" id=" Deseo recibir las ulimas noticias de la pagina" value="Deseo recibir las ulimas noticias de la pagina"></label>
-						<div class="text-center  ">
-							<input  type="reset"  class="m-3" id="Boton"  value="Cancelar">
-							<input  type="submit" id="Boton" name="Enviar">
+						<input type="checkbox" placeholder="Deseo recibir las ulimas noticias de la pagina" value="Deseo recibir las ulimas noticias de la pagina"></label>
+						<div class="text-center " >
+							<input  id="boton__cancelar" type="reset"  class="m-3"   value="Cancelar">
+							<input id="boton__enviar" type="submit"  name="Enviar">
 						</div>
 					</div>
 					<!-FIN DE LA SECTION CONTACTO------>
