--- a/galeria.html
+++ b/galeria.html
@@ -44,7 +44,7 @@
  <img  src=" img/gale.jpg">	
 </header>
 <main  class="background-image" id="main">
-  <h1 class="text-center supergrande text-colorwhite">Galeria De Imagenes De Marilyn Manson</h1>
+  <h1 class="text-center supergrande">GALERIA DE IMAGENES DE MARILYN MANSON</h1>
   <div>
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
