--- a/tour.html
+++ b/tour.html
@@ -47,31 +47,110 @@
 		<img src=" img/black.jpg" alt="marilyn manson foto"> 
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main  class="flex2 fondotour" id="main">
-		<h1 class="margin2 paddingto " >TOUR / ULTIMAS FECHAS</h1> 
-
-		<h4 class=" text-center " >***ACTUALMENTE NO HAY NOVEDADES DE UNA NUEVA GIRA DE LA BANDA***</h4>
-	
+		<h1 class="margin2 paddingto ">HISTORIAL DE TOUR DE LA BANDA</h1> 
+		<table class="table table-bordered  -´+">
+			<thead>
+				<tr>
+					<th scope="col">AÑO</th>
+					<th scope="col">NOMBRE</th>
+					<th scope="col">INFORMACION</th>
+					<th scope="col">CANTIDAD DE FECHAS</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th scope="row">1996-1997</th>
+					<td>Dead to the World Tour</td>
+					<td>Disco en promoción: Antichrist Superstar
+						Fecha de inicio: 7 de septiembre de 1996
+					Fecha final: 17 de septiembre de 1997</td>
+					<td>175</td>
+				</tr>
+				<tr>
+					<th scope="row">1998-1999</th>
+					<td>Mechanical Animals Tour</td>
+					<td>Disco en promoción: Mechanical Animals
+						Fecha de inicio: 25 de octubre de 1998
+						Fecha final: 31 de enero de 1999
+					</td>
+					<td>46 (52 planeadas)
+					</td>
+				</tr>
+				<tr>
+					<th scope="row">2000-2001</th>
+					<td>Guns, God and Government Tour</td>
+					<td>Disco en promoción: Holy Wood (In the Shadow of the Valley of Death)
+						Fecha de inicio: 27 de octubre de 2000
+					Fecha final: 2 de septiembre de 2001</td>
+					<td>107 (109 planeadas)</td>
+				</tr>
+				<tr>
+					<th scope="row">2003</th>
+					<td >Grotesk Burlesk Tour</td>
+					<td>Disco en promoción: The Golden Age of Grotesque
+						Fecha de inicio: 11 de abril de 2003
+					Fecha final: 27 de diciembre de 2003</td>
+					<td>105
+					(108 planeadas)</td>
+				</tr>
+				<tr>
+					<th scope="row">2004-2005</th>
+					<td >Against All Gods Tour</td>
+					<td>Disco en promoción: Lest We Forget: The Best Of
+						Fecha de inicio: 27 de octubre de 2004
+					Fecha final: 31 de agosto de 2005</td>
+					<td>63
+					(64 planeadas)</td>
+				</tr>
+				<tr>
+					<th scope="row">2007-2008</th>
+					<td >Rape of the World Tour</td>
+					<td>Disco en promoción: Eat Me, Drink Me
+						Fecha de inicio: 26 de mayo de 2007
+					Fecha final: 2 de marzo de 2008</td>
+					<td>122</td>
+				</tr>  
+				<tr>
+					<th scope="row">2012-2013</th>
+					<td >Hey, Cruel World...Tour</td>
+					<td>Disco en promoción: Born Villain
+						Fecha de inicio: 24 de febrero de 2012
+					Fecha final: 21 de julio de 2013</td>
+					<td>163
+						(167 planeadas)
+						(36 junto a Rob Zombie)
+					(19 junto a Alice Cooper)</td>
+				</tr>
+				<tr>
+					<th scope="row">2015</th>
+					<td >The Hell Not Hallelujah Tour</td>
+					<td>Disco en promoción: The Pale Emperor
+					Fecha de inicio: 21 de enero de 2015</td>
+					<td>666</td>
+				</tr>
+			</tbody>
+		</table>
 	</main>
-	<footer id="footer" class="contfo" >
-		<h5 class="text-center chico text-colorwhite animacion">SITIOS OFICIALES</h5>
+	<footer id="footer" >
+		<h5 class="text-center">SITIOS OFICIALES</h5>
 		<article>
 			<a href="https://www.facebook.com/MarilynManson" target="_blank">
-				<img class="animacion__footer" src="img/f.png">
+				<img src="img/f.png">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-				<img class="animacion__footer" src="img/in.png">
+				<img src="img/in.png">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-				<img class="animacion__footer" src="img/yu.png">
+				<img src="img/yu.png">
 			</a>
 		</article>
 		<article>
 			<a href="https://www.marilynmanson.com/" target="_blank">
-				<img class="animacion__footer"  src="img/logo1.png">
+				<img  src="img/logo1.png">
 			</a>
 		</article>
 
